# mcp-testing-notes-app

./: README.md  pyproject.toml
app/: database.py  main.py  models.py  repositories.py  schemas.py
app/routers/: notes.py
app/routes/: notes.py
frontend/: README.md  jest.config.cjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: NoteForm.tsx  NotesForm.tsx  NotesList.tsx  NotesPage.tsx  NotesSearch.tsx
frontend/lib/: api.ts
frontend/tests/: NotesPage.test.tsx
tests/: test_notes_api.py
